# gst_pipeline

./: .gitignore  LICENSE  README.md  client-rtpaux.c  compile_flags.txt  gst_guide_commands.sh  server-rtpaux.c  test.sh
clang/: client.c  client.cpp  creator.c  ex_client.cpp  ex_server.cpp  greeter_server.cc  meson.build  profile.sh  server.c  server.cpp
clang/bkup/: client.cpp
clang/client/: meson.build  pipeline.cc  pipeline.hpp  viewer.cpp  viewer.hpp
clang/common/: aux.h  cb_basic.h  codecs.hpp  debug.h  gst_wrapper.h
clang/example/: client.cc  ex_server.cc  meson.build  server.cc
clang/inc/: aux.h  cb_basic.h  client.h  creator.h  debug.h  ghost.h  global.h  gst_common.h  gst_wrapper.h  session.h  stream_session.h
clang/include/: aux.h  binding.h  cb_basic.h  codec_pay.hpp  codecs.hpp  creator.h  grpc_client.hpp  grpc_server.hpp  gst_common.hpp  gst_wrapper.h  server.h  stream_session.h  streamer.hpp
clang/plot/: data.py  draw.py  naive.csv  source.csv  user.csv
clang/proto/: binder.proto  meson.build
clang/protos/: client.proto  creator.proto
clang/server/: binder.hpp  grpc_server.cc  grpc_server.hpp  meson.build  pipeline.cc  pipeline.hpp
clang/source/: grpc_client.cpp  grpc_server.cpp  streamer.cpp  viewer.cpp
clang/src/: meson.build  streamer.cpp
tutorials/: app_src_sink.c  dynamic_gst.c  gtk_player.c  hello_gstreamer.c  pad_capabilities.c  pipeline_basic.c
tutorials/basic/: discoverer.c  hello_gstreamer.c  platform_specific.md  streaming.c  time_management.c  transcoder.c
tutorials/basic_tutorial/: dynamic_pipeline.c  elements.md  multithread.c  playback_basic.c  tools.md
tutorials/meson/dependencies/: main.c
tutorials/meson/hellomeson/: README.md  main.c
tutorials/playback/: appsrc_playbin.c  custom_playbin.c  hw_decoding.md  playbin_sink.c  progressive_streaming.c
